[package]
name = "csc443"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scroll = "0.11.0"
positioned-io = "0.3.1"
rayon = "1.7.0"
itertools = "0.10.5"
rand = "0.8.5"
arrayvec = "0.7.4"
glommio = "0.8.0"
futures-lite = "1.13.0"
futures = { version = "0.3.28", features = [] }

