[package]
name = "csc443"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
scroll = "0.11.0"
positioned-io = "0.3.1"
rayon = "1.7.0"
itertools = "0.10.5"
rand = "0.8.5"
arrayvec = "0.7.4"
libc = { version = "0.2.148", features = [] }
siphasher = { version = "1.0.0", features = [] }
bitset-core = "0.1.1"
static_assertions = "1.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"


